# cfs-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
apps/ios/CFSMobile/: CFSMobileApp.swift  CfsBridge.swift  ContentView.swift
apps/ios/CFSMobile.xcodeproj/: project.pbxproj
apps/ios/CFSMobile.xcodeproj/project.xcworkspace/xcuserdata/nadeem.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ios/CFSMobile.xcodeproj/xcuserdata/nadeem.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/macos/: index.html
apps/macos/src-tauri/: Cargo.toml  tauri.conf.json
apps/macos/src-tauri/src/: main.rs
cfs-poc/cfs-poc.xcodeproj/: project.pbxproj
cfs-poc/cfs-poc.xcodeproj/project.xcworkspace/xcuserdata/nadeem.xcuserdatad/: UserInterfaceState.xcuserstate
crates/cfs-core/: Cargo.toml
crates/cfs-core/src/: chunk.rs  context_assembler.rs  diff.rs  document.rs  edge.rs  embedding.rs  error.rs  hlc.rs  id.rs  lib.rs  state.rs  text.rs
crates/cfs-desktop/: Cargo.toml
crates/cfs-desktop-cli/: Cargo.toml
crates/cfs-desktop-cli/src/: main.rs
crates/cfs-desktop/examples/: verify_db.rs  verify_search.rs
crates/cfs-desktop/src/: lib.rs  sync.rs  watcher.rs
crates/cfs-desktop/tests/: system_validation.rs
crates/cfs-embeddings/: Cargo.toml
crates/cfs-embeddings/src/: lib.rs
crates/cfs-graph/: Cargo.toml
crates/cfs-graph/src/: index.rs  lib.rs  migrations.rs
crates/cfs-graph/src/migrations/: 001_initial.sql  002_add_timestamps.sql  003_add_l2_norm.sql
crates/cfs-mobile/: Cargo.toml  ios_harness.c
crates/cfs-mobile/src/: lib.rs
crates/cfs-parser/: Cargo.toml
crates/cfs-parser/src/: chunker.rs  lib.rs  parsers.rs
crates/cfs-query/: Cargo.toml
crates/cfs-query/src/: lib.rs
crates/cfs-relay-client/: Cargo.toml
crates/cfs-relay-client/src/: lib.rs
crates/cfs-sync/: Cargo.toml
crates/cfs-sync/src/: crypto.rs  identity.rs  lib.rs  merkle.rs
crates/cfs-tests/: Cargo.toml
crates/cfs-tests/src/: lib.rs
crates/cfs-tests/tests/: context.rs  determinism.rs  incremental.rs  retrieval.rs  sync_audit.rs
crates/cp-canonical-embeddings/: Cargo.toml  README.md
crates/cp-canonical-embeddings/assets/: README.md  config.json  modules.json  tokenizer_config.json
crates/cp-canonical-embeddings/assets/1_Pooling/: config.json
crates/cp-canonical-embeddings/src/: lib.rs  model.rs  softfloat.rs  tokenizer_data.rs  tokenizer_impl.rs
crates/cp-core/: Cargo.toml  README.md
crates/cp-core/src/: chunk.rs  context_assembler.rs  diff.rs  document.rs  edge.rs  embedding.rs  error.rs  hlc.rs  id.rs  lib.rs  state.rs  text.rs
crates/cp-desktop/: Cargo.toml  README.md
crates/cp-desktop-cli/: Cargo.toml  README.md
crates/cp-desktop-cli/src/: main.rs
crates/cp-desktop/examples/: verify_db.rs  verify_search.rs
crates/cp-desktop/src/: lib.rs  sync.rs  watcher.rs
crates/cp-desktop/tests/: system_validation.rs
crates/cp-embeddings/: Cargo.toml  README.md
crates/cp-embeddings/src/: lib.rs
crates/cp-graph/: Cargo.toml  README.md
crates/cp-graph/src/: index.rs  lib.rs  migrations.rs
crates/cp-graph/src/migrations/: 001_initial.sql  002_add_timestamps.sql  003_add_l2_norm.sql  004_add_path_id_and_embedding_version.sql
crates/cp-inference-mobile/: Cargo.toml  README.md
crates/cp-inference-mobile/src/: lib.rs
crates/cp-mobile/: Cargo.toml  README.md  ios_harness.c
crates/cp-mobile/src/: lib.rs
crates/cp-parser/: Cargo.toml  README.md
crates/cp-parser/src/: chunker.rs  lib.rs  parsers.rs
crates/cp-query/: Cargo.toml  README.md
crates/cp-query/examples/: verify_llm.rs
crates/cp-query/src/: lib.rs
crates/cp-relay-client/: Cargo.toml  README.md
crates/cp-relay-client/src/: lib.rs
crates/cp-relay-server/: Cargo.toml  README.md
crates/cp-relay-server/src/: lib.rs  storage.rs
crates/cp-sync/: Cargo.toml  README.md
crates/cp-sync/src/: crypto.rs  identity.rs  lib.rs  merkle.rs
crates/cp-tests/: Cargo.toml
crates/cp-tests/src/: lib.rs
crates/cp-tests/tests/: context.rs  determinism.rs  e2e_mac_ios.rs  incremental.rs  retrieval.rs  sync_audit.rs
docs/: TEST_COVERAGE_SCENARIOS.md  test-coverage-scenarios.md
docs/plans/: 2026-02-16-mac-ios-document-sync-design.md  2026-02-16-macos-ios-document-sync-design.md
examples/ios/CPMobile/: CPMobileApp.swift  ContentView.swift  CpBridge.swift
examples/ios/CPMobile.xcodeproj/: project.pbxproj
examples/ios/CPMobile.xcodeproj/xcuserdata/nadeem.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/macos/: index.html
examples/macos/src-tauri/: Cargo.toml  tauri.conf.json
examples/macos/src-tauri/src/: main.rs
relay/cfs-relay-server/: Cargo.toml
relay/cfs-relay-server/src/: lib.rs  main.rs
relay/cp-relay-server/src/: lib.rs  main.rs  storage.rs
scripts/: build_ios.sh  clean.sh  dev.sh
spec/: README.md
spec/application/: CFS-020-intelligence-interface.md  CFS-021-context-assembly.md  CP-020-intelligence-interface.md  CP-021-context-assembly.md
spec/core/: CFS-001-data-model.md  CFS-002-storage-engine.md  CFS-003-determinism.md  CP-001-data-model.md  CP-002-storage-engine.md  CP-003-determinism.md
spec/protocol/: CFS-010-embedding-protocol.md  CFS-011-indexing-protocol.md  CFS-012-retrieval-protocol.md  CFS-013-sync-protocol.md  CP-010-embedding-protocol.md  CP-011-indexing-protocol.md  CP-012-retrieval-protocol.md  CP-013-sync-protocol.md
test_corpus/: adversarial.md  ethereum.md  lexical_gap.md  random.md  zk.md  zksnark.md
