[package]
name = "cfs-graph"
description = "Knowledge graph and vector store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cfs-core = { path = "../cfs-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Storage
rusqlite = { workspace = true }
hnsw_rs = { workspace = true }
half = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
