[package]
name = "cfs-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cfs-core = { path = "../cfs-core" }
cfs-graph = { path = "../cfs-graph" }
cfs-embeddings = { path = "../cfs-embeddings" }
cfs-sync = { path = "../cfs-sync" }
cfs-desktop = { path = "../cfs-desktop" }
cfs-query = { path = "../cfs-query" }
tokio = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
