[package]
name = "cp-canonical-embeddings"
version = "0.1.0"
edition = "2021"
description = "Deterministic embedding generation for CP"
authors = ["Nadeem Bhati"]
license = "Apache-2.0"

[dependencies]
# BLAKE3 for hashing
blake3 = "1.5"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Safe tensors for loading model weights
safetensors = "0.4"

# Lazy initialization for model/tokenizer
lazy_static = "1.4"

[lib]
crate-type = ["rlib"]
