[package]
name = "cp-canonical-embeddings"
version = "0.1.0"
edition = "2021"
description = "Deterministic embedding generation for CP"
authors = ["Nadeem Bhati"]
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = "0.4"
lazy_static = "1.4"

# ML dependencies (from workspace)
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }

# For tests
tempfile = { workspace = true }

[lib]
crate-type = ["rlib"]
