[package]
name = "cp-core"
description = "Core data models and traits for Canon Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde-big-array = { workspace = true }
uuid = { workspace = true }

thiserror = { workspace = true }
blake3 = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
