[package]
name = "cp-parser"
description = "Document parsing for PDF, Markdown, and text files"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cp-core = { path = "../cp-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Parsing
pdf-extract = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
