[package]
name = "cp-relay-server"
description = "Encrypted blob relay server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cp-core = { path = "../../crates/cp-core" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
