[package]
name = "cp-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
cp-core = { path = "../cp-core" }
cp-graph = { path = "../cp-graph" }
cp-embeddings = { path = "../cp-embeddings" }
cp-sync = { path = "../cp-sync" }
cp-desktop = { path = "../cp-desktop" }
cp-query = { path = "../cp-query" }
tokio = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
