[package]
name = "macos-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "dialog", "dialog-open", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { workspace = true }
cfs-core = { path = "../../../crates/cfs-core" }
cfs-desktop = { path = "../../../crates/cfs-desktop" }
cfs-query = { path = "../../../crates/cfs-query" }
cfs-embeddings = { path = "../../../crates/cfs-embeddings" }
tracing = { workspace = true }
uuid = { workspace = true }
cfs-sync = { path = "../../../crates/cfs-sync" }
cfs-relay-client = { path = "../../../crates/cfs-relay-client" }
path-clean = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
